# intent-swap

./: .gitignore  Cargo.toml  README.md
contracts/: Forc.toml
contracts/asset_ops/: Forc.toml  fuel-toolchain.toml
contracts/contract_validator/: Forc.toml
contracts/contract_validator/src/: main.sw
contracts/dummy_predicate_wallet/: Forc.toml
contracts/dummy_predicate_wallet/src/: main.sw
contracts/helpers/src/: general_helpers.sw  lib.sw  numeric_utils.sw  tests.sw
contracts/intentswap_712_tools/: Forc.toml
contracts/intentswap_712_tools/src/: generalized_swap.sw  io_utils.sw  lib.sw  test_genswap.sw  transaction_utils.sw
contracts/predicate_validator/: Forc.toml
contracts/predicate_validator/src/: main.sw
doc/: 04.md
src/: consts.rs  display.rs  evm_712_sign.rs  helpers.rs  interfaces.rs  io.rs  main.rs  receipt_show.rs  setup_01.rs  wallets.rs
